readme; dbox creds to env

--- a/README
+++ b/README
@@ -1,4 +1,11 @@
+# HypeDrop!
 
+A phantomjs + dropbox + expressjs expirement
 
+## Notes:
 
+* add these config var:
 
+    BUILDPACK_URL=https://github.com/nickmerwin/heroku-buildpack-nodejs-phantomjs
+    HYPEDROP_DROPBOX_APP_KEY=...
+    HYPEDROP_DROPBOX_APP_SECRET=...
